    * if.include: new configurable parameters for assumed input and output speed
    * cisco_qos: new param unit:    switches between bit/byte display
                 new param average: average the values over the given minute
                 new param post can now be configured via int and float, now
                                supports percentage values
    
    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Valuespec: CascadingDropdown now able to process choice values from functions
    * cisco_qos parameters now configurable via WATO

1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined
    * FIX: check_mk_base: fixed rounding error in get_bytes_human_readable
    * FIX: check_mk: improved support of utf-8 characters in extra_service_conf
    * FIX: livestatus: table statehist now able to check AuthUser permissions
    * New configuration variable contactgroup_members

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: mysql: fixed crash on computing IO information
    * FIX: diskstat: fix local variable 'ios_per_sec' referenced before assignment
    * FIX: multipath: ignore warning messages in agent due to invalid multipath.conf
    * FIX: megaraid_bbu: deal with broken output ("Adpater"), found in Open-E
    * FIX: megaraid_pdisk: deal with special output of Open-E